--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,30 @@
             <!--Form to add new users-->
             <form action="{{ url_for('add_user') }}" method="post">
                 <label for="name">Name: </label><br>
-                <input type="text" id="name" name="name"><br>
-                <input type="submit" value="Submit">
+                <input type="text" id="name" name="name">
+                <br><input type="submit" value="Submit">
+            </form>
+        </div>
+        <div id="add-entry">
+            <h1>Add Entry</h1>
+            <ul></ul>
+                {% for entry in entry_list %}
+                <li><strong>{{ entry.name }}:</strong> {{ entry.event }}</li>
+                {% endfor %}
+            </ul><br>
+            
+            <!--Form to add new entries-->
+            <form action="{{ url_for('add_entry') }}" method="post">
+                <label for="name">Name: </label><br>
+                <select id="dropdown" name="dropdown">
+                    <option value="free space">free space</option>
+                    {% for user in user_list %}
+                    <option value="{{ user }}">{{ user }}</option>
+                    {% endfor %}
+                </select><br>
+                <label for="event">Event: </label><br>
+                <input type="text" id="event" name="event">
+                <br><input type="submit" value="Submit">
             </form>
         </div>
     </body>
