--- a/templates/template.html
+++ b/templates/template.html
@@ -3,9 +3,13 @@
   <head>
     {% block head %}
     <title>Game Night Bingo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='static.css') }}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"
     {% endblock %}
   </head>
-  <body>
-    <div id="content">{% block content %}{% endblock %}</div>
+  <body class="text-bg-light">
+    {% block content %}{% endblock %}
   </body>
 </html>
